--- a/ClientApp/src/app/home/home.component.css
+++ b/ClientApp/src/app/home/home.component.css
@@ -15,4 +15,10 @@ html {
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+} 
+.div-add {
+  margin-bottom: -10px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
 }
